--- a/css/styles.css
+++ b/css/styles.css
@@ -207,7 +207,7 @@ img {
   margin: 0 156px;
 }
 .values-item {
-  width: 264px;
+  width: calc((100% - 72px) / 4);
 }
 .values-heading {
   letter-spacing: 0.02em;
@@ -215,6 +215,7 @@ img {
   font-size: 20px;
   line-height: 1.2;
   color: var(--primary-text-color);
+  margin-bottom: 8px;
 }
 .values-content {
   font-size: 16px;
