--- a/css/styles.css
+++ b/css/styles.css
@@ -241,10 +241,14 @@ img {
   justify-content: center;
   align-items: center;
   padding: 0px 0px 32px;
-  gap: 32px;
+  gap: 24px;
+  border-radius: 0px 0px 4px 4px;
 }
 .team-list-item {
   background-color: var(--active-btn-text);
+}
+.team-card-descr {
+  padding: 32px 16px;
 }
 .team-name {
   color: var(--primary-text-color);
@@ -253,6 +257,7 @@ img {
   line-height: 1.2;
   text-align: center;
   letter-spacing: 0.02em;
+  margin-bottom: 8px;
 }
 .team-descr {
   color: var(--secondary-text-color);
