--- a/css/styles.css
+++ b/css/styles.css
@@ -164,6 +164,9 @@ img {
   display: flex;
   letter-spacing: 0.02em;
   max-width: 496px;
+  margin-bottom: 48px;
+  margin-right: auto;
+  margin-left: auto;
 }
 .srvc-btn {
   background-color: var(--link-color);
@@ -262,7 +265,12 @@ img {
   text-align: center;
   letter-spacing: 0.02em;
 }
-/* FILTERS */
+
+/* PORTFOLIO */
+.portfolio {
+  padding: 96px 0 120px;
+}
+/* FILTERS part */
 .filter-list {
   list-style: none;
   padding: 0px;
@@ -270,7 +278,6 @@ img {
   display: flex;
   justify-content: center;
   margin-bottom: 72px;
-  margin-top: 96px;
 }
 .btn {
   color: var(--link-color);
@@ -289,10 +296,12 @@ img {
 .btn:hover {
   color: var(--active-btn-text);
   background-color: var(--active-color);
+  border: 1px solid transparent;
 }
 .btn:focus {
   color: var(--active-btn-text);
   background-color: var(--active-color);
+  border: 1px solid transparent;
 }
 .btn:active {
   color: var(--active-btn-text);
@@ -301,26 +310,33 @@ img {
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
 }
-/* PRODUCTS */
+/* PRODUCTS part */
 .products-list {
   list-style: none;
   --items: 9;
   margin-bottom: 120px;
   gap: 24px;
+  column-gap: var(--indent);
+  row-gap: 48px;
 }
 .products-item {
   box-sizing: border-box;
+  width: calc((100% - 48px) / 3);
+}
+.products-item-descr {
+  padding: 32px 16px;
   border: 1px solid var(--borders-color);
+  border-top: none;
 }
 .products-name {
   justify-content: center;
   padding: 0px 16px;
-  gap: 8px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
+  margin-bottom: 8px;
 }
 .products-descr {
   justify-content: center;
@@ -334,7 +350,7 @@ img {
 /* FOOTER */
 .footer {
   background-color: var(--primary-text-color);
-  height: 312px;
+  padding: 100px 0;
 }
 .footer-logo {
   color: var(--link-color);
@@ -346,6 +362,7 @@ img {
   text-decoration: none;
   text-transform: uppercase;
   margin-bottom: 16px;
+  display: inline-block;
 }
 .footer-studio {
   color: var(--footer-text-color);
@@ -356,5 +373,5 @@ img {
   font-size: 16px;
   line-height: 1.5;
   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  width: 264px;
+  max-width: 264px;
 }
