--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@ body {
   margin-bottom: 72px;
 }
 .section {
-  padding: 120px 0;
+  padding-bottom: 120px;
 }
 .link {
   text-decoration: none;
@@ -88,6 +88,7 @@ img {
 .navigation {
   display: flex;
   align-items: center;
+  margin-right: auto;
 }
 .header-logo {
   text-transform: uppercase;
@@ -109,7 +110,7 @@ img {
   display: flex;
   align-items: center;
   gap: 40px;
-  margin-right: 332px;
+  margin-right: auto;
 }
 .header-nav-link {
   font-weight: 500;
@@ -161,7 +162,6 @@ img {
   font-size: 56px;
   line-height: 1.07;
   text-align: center;
-  display: flex;
   letter-spacing: 0.02em;
   max-width: 496px;
   margin-bottom: 48px;
@@ -199,6 +199,9 @@ img {
 }
 
 /* VALUES */
+.values-section {
+  padding-top: 120px;
+}
 .values-list {
   list-style: none;
   display: flex;
@@ -227,13 +230,14 @@ img {
   list-style: none;
   display: flex;
   align-items: flex-start;
-  padding: 0px;
+  padding: 0;
   --items: 3;
   gap: 24px;
 }
 /* TEAM */
 .team-section {
   background-color: var(--footer-text-color);
+  padding-top: 120px;
 }
 .team-list {
   list-style: none;
@@ -277,7 +281,6 @@ img {
   gap: 24px;
   display: flex;
   justify-content: center;
-  margin-bottom: 72px;
 }
 .btn {
   color: var(--link-color);
@@ -314,7 +317,6 @@ img {
 .products-list {
   list-style: none;
   --items: 9;
-  margin-bottom: 120px;
   gap: 24px;
   column-gap: var(--indent);
   row-gap: 48px;
@@ -330,7 +332,6 @@ img {
 }
 .products-name {
   justify-content: center;
-  padding: 0px 16px;
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
@@ -340,7 +341,6 @@ img {
 }
 .products-descr {
   justify-content: center;
-  padding: 0px 16px;
   gap: 8px;
   font-size: 16px;
   line-height: 1.5;
