--- a/css/styles.css
+++ b/css/styles.css
@@ -40,7 +40,7 @@ body {
   margin-bottom: 72px;
 }
 .section {
-  padding-bottom: 120px;
+  padding: 120px 0;
 }
 .link {
   text-decoration: none;
@@ -51,6 +51,7 @@ body {
 .list {
   list-style: none;
   padding: 0;
+  margin: 0;
 }
 h1,
 h2,
@@ -199,9 +200,6 @@ img {
 }
 
 /* VALUES */
-.values-section {
-  padding-top: 120px;
-}
 .values-list {
   list-style: none;
   display: flex;
@@ -226,6 +224,9 @@ img {
   color: var(--secondary-text-color);
 }
 /* SERVICES */
+.service-section {
+  padding-top: 0px;
+}
 .service-list {
   list-style: none;
   display: flex;
@@ -237,13 +238,12 @@ img {
 /* TEAM */
 .team-section {
   background-color: var(--footer-text-color);
-  padding-top: 120px;
 }
 .team-list {
   list-style: none;
   justify-content: center;
   align-items: center;
-  padding: 0px 0px 32px;
+  padding: 0px;
   gap: 24px;
 }
 .team-list-item {
@@ -281,7 +281,7 @@ img {
   gap: 24px;
   display: flex;
   justify-content: center;
-  padding-bottom: 72px;
+  margin-bottom: 72px;
 }
 .btn {
   color: var(--link-color);
